// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`solution 01 can draw a single line should handle paths that go down 1`] = `
"
o
|
|
|
|
"
`;

exports[`solution 01 can draw a single line should handle paths that go left 1`] = `
"
----o
"
`;

exports[`solution 01 can draw a single line should handle paths that go right 1`] = `
"
o----
"
`;

exports[`solution 01 can draw a single line should handle paths that go up 1`] = `
"
|
|
|
|
o
"
`;

exports[`solution 01 can draw two lines should handle [D4, R4] 1`] = `
"
o....
|....
|....
|....
|----
"
`;

exports[`solution 01 can draw two lines should handle [R4, D4] 1`] = `
"
o----
....|
....|
....|
....|
"
`;

exports[`solution 01 can draw two lines should handle [R4, U4] 1`] = `
"
....|
....|
....|
....|
o----
"
`;

exports[`solution 01 can draw two lines should handle [U4, L4] 1`] = `
"
----|
....|
....|
....|
....o
"
`;
